@@ -56,8 +56,7 @@ public class SecurityConfig {
                                 CorsConfiguration configuration = new CorsConfiguration();
                                 configuration.setAllowedOrigins(
                                         List.of(
-                                                "http://localhost:5000",
-                                                "https://chuka.kr",
+                                                "http://k10c107.p.ssafy.io:8080",
                                                 "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8081",
                                                 "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
                                                 "http://k10c107.p.ssafy.io:8083"
@@ -67,8 +66,7 @@ public class SecurityConfig {
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
-                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+                                configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
 
                                 return configuration;
 
