@@ -54,13 +54,19 @@ public class SecurityConfig {
                             @Override
                             public CorsConfiguration getCorsConfiguration(HttpServletRequest request) {
                                 CorsConfiguration configuration = new CorsConfiguration();
-                                configuration.setAllowedOrigins(List.of("http://localhost:5000", "https://chuka.kr", "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082", "http://k10c107.p.ssafy.io:8083", "http://k10c107.p.ssafy.io:8084"));
+                                configuration.setAllowedOrigins(
+                                        List.of(
+                                                "http://k10c107.p.ssafy.io:8080",
+                                                "http://ec2-43-203-200-59.ap-northeast-2.compute.amazonaws.com:8082",
+                                                "http://k10c107.p.ssafy.io:8083",
+                                                "http://k10c107.p.ssafy.io:8084"
+                                        )
+                                );
                                 configuration.setAllowedMethods(Collections.singletonList("*"));
                                 configuration.setAllowCredentials(true);
                                 configuration.setAllowedHeaders(Collections.singletonList("*"));
                                 configuration.setMaxAge(3600L);
-                                configuration.setExposedHeaders(Collections.singletonList("Set-Cookie"));
-                                configuration.setExposedHeaders(Collections.singletonList("Authorization"));
+                                configuration.setExposedHeaders(List.of("Set-Cookie", "Authorization", "Refresh-Token"));
 
                                 return configuration;
 
